no anda pasar a deterministico

--- a/templates/automata.html
+++ b/templates/automata.html
@@ -44,11 +44,11 @@
         </div>
     </div>
     <script src="/static/programa.js"></script>
-    <div id="validacion_section" style="display:none;">
-        <h2>Validar Cadena</h2>
-        <input type="text" id="cadena" placeholder="Ingrese una cadena">
-        <button onclick="validarCadena()">Validar Cadena</button>
-        <div id="validacion_resultado"></div>
+    <div id="validacion_section" style="display: none;">
+        <h3>Validar Cadena</h3>
+        <input type="text" id="cadena" placeholder="Ingrese la cadena a validar">
+        <button onclick="validarCadena()">Validar</button>
+        <p id="validacion_resultado"></p>
     </div>
 
 </body>
