--- a/templates/automata.html
+++ b/templates/automata.html
@@ -43,14 +43,15 @@
             <input type="button" value="Convertir a Determinístico" onclick="convertirADeterministico()">
         </div>
     </div>
-    <script src="/static/programa.js"></script>
+
     <div id="validacion_section" style="display: none;">
         <h3>Validar Cadena</h3>
         <input type="text" id="cadena" placeholder="Ingrese la cadena a validar">
-        <button onclick="validarCadena()">Validar</button>
+        <button type="button" onclick="validarCadena()">Validar</button>
         <p id="validacion_resultado"></p>
     </div>
 
+    <script src="/static/programa.js"></script>
 </body>
 
 </html>
