anda validar cadenas

--- a/templates/automata.html
+++ b/templates/automata.html
@@ -42,6 +42,9 @@
         <div id="deterministic_button" style="display:none;">
             <input type="button" value="Convertir a Determinístico" onclick="convertirADeterministico()">
         </div>
+        <div id="eliminar_error_button" style="display:none;">
+            <input type="button" value="Eliminar Estados de Error" onclick="eliminarEstadosError()">
+        </div>
     </div>
 
     <div id="validacion_section" style="display: none;">
